<resources>
    <string name="app_name">MorfinAuthDemo</string>
    <string name="status_disconnected">Status : Disconnected</string>
    <string name="todo">TODO</string>
    <string name="init">INIT</string>
    <string name="uninit">UNINIT</string>

    <string name="start_capture">START CAPTURE</string>
    <string name="stop_capture">STOP CAPTURE</string>

    <string-array name="device_models">
        <item>MFS500</item>
        <item>MFS100</item>
        <item>MELO31</item>
        <item>MARC10</item>
    </string-array>
</resources>



